# memory_allocator

./: .gitignore  CMakeLists.txt  README.md
include/memory_allocator/: Adapter.h  BlockAllocator.h  Chunk.h  Debug.h  LinearAllocator.h  MappedSegmentAllocator.h
memory_allocator/: BlockAllocator.cpp  CMakeLists.txt  Chunk.cpp  Chunk.h  Debug.h  LinearAllocator.cpp  MappedSegmentAllocator.cpp  MappedSegmentAllocator.h  MemoryAllocator.cpp  MemoryAllocator.h
src/memory_allocator/: BlockAllocator.cpp  CMakeLists.txt  LinearAllocator.cpp  MappedSegmentAllocator.cpp
test/: AdapterFixture.h  CMakeLists.txt  mem_alloc_test.cpp
